fix page overflows

--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@ html {
 }
 section {
   position: relative;
+  max-width: 100vw;
 }
 nav {
   background-color: #1f1f1f;
   height: 5em;
+  max-width: 100vw;
 }
 .navbar-collapse {
   background-color: #1f1f1f;
@@ -244,9 +246,9 @@ nav a:hover {
     font-size: 1.25rem;
     line-height: 1;
     background-color: transparent;
-    border: 1px solid transparent !important;
-    outline: none !important;
+    border: 1px solid transparent;
     border-radius: 0.25rem;
+    outline: none;
     color: #fff;
   }
   .navbar-collapse {
